--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -134,9 +134,10 @@
 							The other two students created the art for the project, giving it a pixelated, and somewhat cartoony feel to it.
 							After submitting the game to the jam we waited a while during the game was made avaliable to the public in Stoke City Centre, as part of a push to get people back into city centres.
 							During the awards ceremony it was revealed that we had won our category as well as overall, with the main feedback given that people wanted more levels, and that it felt like the 'most complete game in the contest overall.' 
+							The gameplay video link below is of the professionally developed version of the game.
 						</p>
 						<footer>
-							<a href="https://player-two.itch.io/rise-of-the-spitfire" class="button">Gameplay Video</a>
+							<a href="https://youtu.be/af4zY-OiqKQ" class="button">Gameplay Video</a>
 							<a href="https://player-two.itch.io/rise-of-the-spitfire" class="button">Play On Itch.io</a>
 						</footer>
 					</article>
