--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -185,7 +185,7 @@
 							As a first game jam project the experience was very good, extremely stressful towards the end, but I learnt a lot from the experience that I have applied to more recent projects. 
 						</p>
 						<footer>
-							<a href="https://player-two.itch.io/zombie-escape" class="button">Gameplay Video</a>
+							<a href="https://youtu.be/su0xtQ2ApgE" class="button">Gameplay Video</a>
 							<a href="https://player-two.itch.io/zombie-escape" class="button">Download From Itch.io</a>
 						</footer>
 					</article>
