--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -109,7 +109,7 @@
                                                          As this was my fourth game jam I was able to build off prior jam experience, and have time management handled more efficiently, with less stress overall.
 						</p>
 						<footer>
-							<a href="https://player-two.itch.io/unstable-abel" class="button">Gameplay Video</a>
+							<a href="https://youtu.be/ELBZV8HPjXs" class="button">Gameplay Video</a>
 							<a href="https://player-two.itch.io/unstable-abel" class="button">Download From Itch.io</a>
 						</footer>
 					</article>
