--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -23,8 +23,7 @@
 							<header>
 								<h1><a id="logo">Game Jam Projects</a></h1>
 								<hr />
-								<p>Collection of game jam projects.
-							           These projects are not made to be visually impressive, they are made in a very short space of time, to a specific theme, and are more of a test of time management and quick design and programming than technical prowess. </p>
+								<p>Collection of game jam projects.</p>
 							</header>
 						</div>
 
