--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -81,12 +81,19 @@
 						<header>
 							<h2><a href="https://youtu.be/Crk5be9rgP4">Lost My Marbles</a></h2>
 							<p>
-								My first professionally developed project, developed while working for Curioso Games, whilst in the summer between my first and second year of A-Levels. 
+								My first professionally developed project, developed while working for Curioso Games in the summer between my first and second year of A-Levels. 
 							</p>
-						</header>
+						</header>                                                                                                                                                                                                 
 						<p>
 							As this was my first project developed professionally I learnt a lot, not just about the professional development of games, but also about how teams and larger projects are managed. </br>
-					                
+					                The main area I developed for this project was the opponent AI. The game uses an internal ranking score which ranges from zero all the way up to around about 10. 
+							As the player plays and wins more they will level up, which means that the AI needs to be playing better at higher levels, and worse at lower levels - so the player continually finds the game fun. </br>
+							For the AI I went with a determanistic approach, one which scans through the entire board and calculates the best possible marble placement with the marble colours that they currently have.
+			                                It then, from that positional data, determines the best movement required to get the marbles into that position. For example, if the best possible position was the position at the bottom of the column that the marbles are currently on, but in the other rotation, then the AI would determine that rotating the marbles is the best possible move.
+			                                Then, with the probability scaled due to the ranking of the opponent, a random number is chosen. If this number falls within the scaled distance then a random move is selected instead of the best possible move. (This bit actually runs first for performance reasons)
+							This then therefore gives much better opponents at higher rankings, where around about 2 ranks from the top the randomness does not have any affect. </br>
+							The main difficulty with the AI algorithm was having it handle impossible move situations, such as the best possible move being on the far side of a really high pillar of marbles. In these situations all impossible columns are removed from the calulations. </br>
+							Beyond the AI, I learnt a lot about the game engine of Unity as a whole, and more specifically a lot more about the language of C#.
 						</p>
 						<footer>
 							<a href="https://youtu.be/Crk5be9rgP4" class="button">Link To Gameplay Video</a>
