--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -85,7 +85,7 @@
 							</p>
 						</header>                                                                                                                                                                                                 
 						<p>
-							As this was my first project developed professionally I learnt a lot, not just about the professional development of games, but also about how teams and larger projects are managed. </br>
+							As this was my first project developed professionally I learnt a lot about not just about the programming of professionaly developed games, but also about how teams and larger projects are managed. </br>
 					                The main area I developed for this project was the opponent AI. The game uses an internal ranking score which ranges from zero all the way up to around about 10. 
 							As the player plays and wins more they will level up, which means that the AI needs to be playing better at higher levels, and worse at lower levels - so the player continually finds the game fun. </br>
 							For the AI I went with a determanistic approach, one which scans through the entire board and calculates the best possible marble placement with the marble colours that they currently have.
@@ -116,7 +116,11 @@
 						</header>
 						<p>
 							Having just finished working on the development of Lost My Marbles, I was already up to speed with how the team was managed, along with the version control that was in place at the time. 
-							Therefore, my experince of the development of this project was a lot smoother than the previous project.
+							Therefore, my experince of the development of this project was a lot more focused on the code side of development. </br>
+							In the Rituals project, one of the main areas I developed was the level traversing 'Pin' system. This system is used to allow the player to enter worlds as well as individual levels. 
+							It works mainly through the transfering of relevent data stored internally about the levels, such as the level type, enemy health, moves allowed to beat the level, to the level scene that is to be loaded. 
+							Furthermore, an aim of the system was to make it as easy as possible to have the designers tweek level values without having to touch any game code. </br>
+							
 						</p>
 						<footer>
 							<a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US" class="button">Link To Gameplay Video</a>
