--- a/First Year/index.html
+++ b/First Year/index.html
@@ -36,7 +36,7 @@
 									<ul>
 										<li><a href="#Mario">Super Mario Bros 3</a></li>
 										<li><a href="#Pacman">Pacman</a></li>
-										<li><a href="#OpenGL">OpenGL Boat Project</a></li>
+										<!--<li><a href="#OpenGL">OpenGL Boat Project</a></li> -->
 									</ul>
 								</li>
 							</ul>
@@ -63,13 +63,14 @@
 							<p>First Game Project For University.</p>
 						</article>
 						
+						<!--
 						<article>
 							<a href="#OpenGL" class="image featured"><img src="images/pic01.jpg" alt="OpenGL Boat Project Image" /></a>
 							<header>
 								<h3><a href="#OpenGL">OpenGL Boat Project</a></h3>
 							</header>
 							<p>First Game Project Developed In OpenGL.</p>
-						</article>
+						</article> -->
 
 					</div>
 				</section>
@@ -129,6 +130,7 @@
 				</div>
 
 			<!-- Main -->
+<!--
 				<div id = "OpenGL" class="wrapper style2">
 
 					<article id="main" class="container special">
@@ -148,7 +150,7 @@
 					</article>
 
 				</div>
-
+-->
 			<!-- Footer -->
 				<div id="footer">
 					<div class="container">
