--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -106,7 +106,10 @@
 						<p>
 							In this three day game jam game you play as an unstable footed character called Abel. Your goal in controlling Abel is to outrun the zombies chasing him through traffic and an abundance of fences. </br>
                                                          This project was developed using the game engine of Unity, and made good use of freely available assets, something we as a team had avoided doing in past jams. What this allowed us to do was to focus specifically on the programming aspect of the jam instead of having to worry about art or music. Whilst still having them available to us. </br>
-                                                         As this was my fourth game jam I was able to build off prior jam experience, and have time management handled more efficiently, with less stress overall.
+                                                         As this was my fourth game jam I was able to build off prior jam experience, and have time management handled more efficiently, with less stress overall. </br>
+							 The main part of the development time for me was creating the floppy, yet controllable, player controls. The aim of the system was to allow the player to be able to fing themselves in a ragdoll mode whenever they are hit by a vehicle, but to also allow them to wobble back and forth along the ground. </br>
+							 How this control system was created was through using Unity's joint system, and having a ragdoll model copy the animation of a seperate model. What this allows for is the general walking animation to be followed accuratly, but also for the play controlled version to diverge from the exact animation. </br>
+							 The land generation system was created by my teammate, having the land delete itself as you get too far away from it, reducing the amount of resources required to play the game.  
 						</p>
 						<footer>
 							<a href="https://youtu.be/ELBZV8HPjXs" class="button">Gameplay Video</a>
@@ -157,7 +160,12 @@
 							</p>
 						</header>
 						<p>
-							
+							This game jam was developed for Ludum Dare 43, where the theme was 'Sacrifices Must Be Made'. </br>
+							This is one of the most unique games we as a game jam team have created. The game consists of nine seperate windows, which you can drag around the screen, each containing a Lemming-esk character. Each character is of a certain type and can do a certain action. 
+							These actions allow some of the characters to leave their enclosure, and some require others to let them out of theirs. The key of the game is that the characters can traverse between the screens, falling out of theirs off the whole monitor, or into another enclosure entirely. 
+				  			The aim of the game is to free all of the 'grunts' and lead them into the basket in the red screen. Once all of the 'grunts' are in the basket the king is released, who is then requried to be escorted to the castle at the far right of the screen. </br>
+							The game system built upon the prior game jam, 'Zombie Escape's destructable landscape. Allowing for all of the ground to be editiable while running, and having the grunts 'react' to the new landscape. </br>
+							The game ended up getting 8th for innovation overall.
 						</p>
 						<footer>
 							<a href="https://youtu.be/OPIzuDejbUo" class="button">Gameplay Demo Video</a>
