--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -152,7 +152,7 @@
 			<div id = "LLTK" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="https://player-two.itch.io/long-live-the-king" class="image centered"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="https://player-two.itch.io/long-live-the-king" class="image centered"><img src="images/LLTK.png" alt="" /></a>
 						<header>
 							<h2><a href="https://player-two.itch.io/long-live-the-king">Long Live The King</a></h2>
 							<p>
