--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -83,7 +83,7 @@
 						</article>
 
 						<article>
-							<a href="#zombie" class="image featured"><img src="images/Zomebie Escape.jpg" alt="" /></a>
+							<a href="#zombie" class="image featured"><img src="images/ZE.jpg" alt="" /></a>
 							<header>
 								<h3><a href="https://player-two.itch.io/zombie-escape">Zombie Escape</a></h3>
 							</header>
@@ -179,7 +179,7 @@
 			<div id = "zombie"  class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="https://player-two.itch.io/zombie-escape" class="image centered"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="https://player-two.itch.io/zombie-escape" class="image centered"><img src="images/ZE.png" alt="" /></a>
 						<header>
 							<h2><a href="https://player-two.itch.io/zombie-escape">Zombie Escape</a></h2>
 							<p>
