--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -83,7 +83,7 @@
 						</article>
 
 						<article>
-							<a href="#zombie" class="image featured"><img src="images/ZE.jpg" alt="" /></a>
+							<a href="#zombie" class="image featured"><img src="images/ZE.png" alt="" /></a>
 							<header>
 								<h3><a href="https://player-two.itch.io/zombie-escape">Zombie Escape</a></h3>
 							</header>
