--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -96,7 +96,7 @@
 				<div id = "UnstableAbel" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="https://player-two.itch.io/unstable-abel" class="image centered"><img src="images/CI.png" alt="" /></a>
+						<a href="https://player-two.itch.io/unstable-abel" class="image centered"><img src="images/CI.png" alt="" with="400" height="400" /></a>
 						<header>
 							<h2><a href="https://player-two.itch.io/unstable-abel">Unstable Abel</a></h2>
 							<p>
@@ -123,7 +123,7 @@
 				<div id = "spitfire" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="https://player-two.itch.io/rise-of-the-spitfire" class="image centered"><img src="images/Rise Of The Spitfire.png" alt="" /></a>
+						<a href="https://player-two.itch.io/rise-of-the-spitfire" class="image centered"><img src="images/Rise Of The Spitfire.png" alt="" width="400" height="400"/></a>
 						<header>
 							<h2><a href="https://player-two.itch.io/rise-of-the-spitfire">Rise Of The Spitfire</a></h2>
 							<p>
