--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -75,7 +75,7 @@
 						</article>
 
 						<article>
-							<a href="LLTK" class="image featured"><img src="images/LLTK.png" alt="" /></a>
+							<a href="#LLTK" class="image featured"><img src="images/LLTK.png" alt="" /></a>
 							<header>
 								<h3><a href="https://player-two.itch.io/long-live-the-king">Long Live The King</a></h3>
 							</header>
