--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -142,15 +142,15 @@
 							</p>
 						</header>
 						<p>
-							This project intially started as a week long game jam project at the end of my first year of university. The jam was organised by the university, with the themes all being based on the Stoke On-Trent area.
-							For example some themes were: Spitfire, Blue Clock, Sir Stanley Matthews, etc. </br>
+							This game intially started as a week long game jam project at the end of my first year of University. The jam was organised by the University, with the themes all being based on the Stoke On-Trent area.
+							For example some themes were: Spitfire, Blue Clock, Sir Stanley Matthews, etc. </br> </br>
 							Our theme was 'Spitfire', which we initially brainstormed around and came up with a game idea that was a blend of the flying levels in 'Cuphead', and the plane style in '1942'.
-							What resulted from this was an infinitally playable, side scrolling twin stick shooter set in world war 2. This project won the overall game jam and so we were invited to spend 6 weeks throughout our summer to turn it into a commercially releasable game. </br>
-							After bringing on another programmer, as only one programmer for 6 weeks work would have been unsustainable, we began work on the project. Untimatly turning it from an infinitely playable game into a level based game, with level bosses at the end of each level, and a variety of different enemy flight patterns.
-							Furthermore we added powerups to the game, spicing the gameplay up from the original project. In addition to this, the artists produced new level backgroud artwork, which gave the game a different feel based on what level you are in.
-							All of the music and sound effects are from a humble bundle, as we didnt have an audio producer.
-							The areas that I worked on solely were the level spawning system, with the boss triggers, the level designs, the power-ups, the background art scrolling system and enemy movement controls.
-							This project was also developed within Unity, using C#, as developing the same game within pure C++ would have taken too much time for the 6-week deadline.
+							What resulted from this was an infinitally playable, side scrolling twin stick shooter set in world war 2. This project won the overall game jam and so we were invited to spend 6 weeks throughout our summer to turn it into a commercially releasable game. </br> </br>
+							After bringing on another programmer, as only one programmer for two designers, for 6 weeks work would have been unsustainable, we began work on the project. Untimatly turning it from an infinitely playable, randomly generating game, to a level based one, with level bosses at the end of each level, and a variety of different enemy flight patterns.
+							Furthermore we added powerups to the game, spicing the gameplay up from the original project in a few ways. In addition to this, the artists produced new level backgroud artwork, which gave the game a different feel based on what level you are in.
+							Due to the team not having audio producer, all of the music and sound effects are from a humble bundle that allow for commercial products to be created from the assest. </br> </br>
+							The main areas that I worked on were the level spawning system, with the boss triggers, the level designs, the power-ups, the background art scrolling system and enemy movement controls.
+							This project was also developed within Unity, using C#, as developing the same game within pure C++ would have taken too much time for the 6-week deadline imposed.
 						</p>
 						<footer>
 							<a href="https://youtu.be/af4zY-OiqKQ" class="button">Link To Demo Video</a>
