--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -138,7 +138,7 @@
 						<header>
 							<h2><a href="https://player-two.itch.io/rise-of-the-spitfire">Rise Of The Spitfire</a></h2>
 							<p>
-								After winning the 'Stoke On Trend' game jam, we were invited to continue working on the game and convert the prototype into a fully complete released game. 
+								After winning the 'Stoke On Trend' game jam, we continued working on the game to convert the prototype into a fully complete publishable game. 
 							</p>
 						</header>
 						<p>
