--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -85,7 +85,7 @@
 							</p>
 						</header>                                                                                                                                                                                                 
 						<p>
-							This game was my first professionally developed project, and as such I learnt a lot about the professional programming standards, along with how teams and larger projects are managed from a deadline and feedback perspective. </br>
+							This game was my first professionally developed project, and as such I learnt a lot about the professional programming standards, along with how teams and larger projects are managed from a deadline and feedback perspective. Along with how different areas of game development work together to work towards a completed project.</br>
 					                The main area I developed for this project was the opponent AI. The game uses an internal ranking score which ranges from zero all the way up to around about 10. 
 							As the player plays and wins more they will level up, which means that the AI needs to be playing better at higher levels, and worse at lower levels - so the player continually finds the game fun. </br>
 							For the AI I went with a determanistic approach, one which scans through the entire board and calculates the best possible marble placement with the marble colours that they currently have.
