--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -116,10 +116,10 @@
 						</header>
 						<p>
 							Having just finished working on the development of Lost My Marbles, I was already up to speed with how the team was managed, along with the version control that was in place at the time. 
-							Therefore, my experince of the development of this project was a lot more focused on the code side of development. </br>
-							In the Rituals project, one of the main areas I developed was the level traversing 'Pin' system. This system is used to allow the player to enter worlds as well as individual levels. 
-							It works mainly through the transfering of relevent data stored internally about the levels, such as the level type, enemy health, moves allowed to beat the level, to the level scene that is to be loaded. 
-							A further consideration of the system was to make it as easy as possible to have the designers tweek level values without having to touch any game code, allowing for easier game balancing.</br>
+							Therefore, my experience of the development of this project was a lot more focused on the code side of development, rather than becoming familular with teamworking in a professional enviroment. </br> </br>
+							For the Rituals project, one of the main areas I developed was the level traversing 'Pin' system. This system is used to allow the player to enter worlds as well as individual levels, but was developed with design usage specifically in mind. 
+							This system works mainly through the transfering of relevent data stored internally about the levels, such as the level type, enemy health, moves allowed to beat the level, etc, to the level scene that is to be loaded into. 
+							The main consideration of the system was to make it as easy as possible to have designers tweek level values without having to touch any game code, allowing for easier game balancing and level ordering than without this system.</br>
 							
 						</p>
 						<footer>
