--- a/First Year/index.html
+++ b/First Year/index.html
@@ -115,12 +115,13 @@
 							</p>
 						</header>
 						<p>
-							Through the first semester of the first year we were tasked, as part of a fundamentals module, with re-creating the arcade game Pacman as well as we could.
-							Having completed the basics of Pacman - the maze, player controls and collisions - with a fair amount of time remaining till submission, I decided to add AI to the ghosts that chase you.
-							Prior to this I had not written any complete AI system, so I researched ways of going about the task and decided to go with a stack-based finate state machine. 
-							This ended up working very well, and I was inspired to add another gamemode to the game, as I sill had some time left at this point. 
-							This other gamemode allows for the player to play as one of the ghosts, working in tandem with the other ghosts to chase down an AI controlled Pacman.
-							This is demonstrated in the video link below, and developing the Pacman AI took me right up to the submission date.
+							Through the first semester of the first year we were tasked, as part of a games and graphics fundamentals module, with re-creating the arcade game Pacman as well as we could. </br>
+							Initially I just worked the basic elements of the game, these being the maze collision, player and ghost movement, level switching when the level is complete, and the pellet spawning systems. This was in an attempt to get the basic required elements of the project complete to free up time later on for more complex additions </br>
+							After completing the basics of the project with a fair amount of time remaining till submission, I decided look into how to add AI to the ghosts that chase the player around the level. </br>
+							Prior to this I had not written any complete AI systems, only the opponent player in 'Marbles', so I first researched ways of going about the task and decided to go with a stack-based finate state machine. </br>
+							This approach ended up working very well, and I was inspired to add another gamemode to the game, as I sill had some time left at this point. This other gamemode was to have the player to play as one of the ghosts, working in tandem with the other (AI) ghosts to chase down an AI controlled Pacman. </br>
+							This other gamemode ended up being more complex to implement than I had initially anticipated, but after a long while of bug fixing and tweaking to the AI system, the gamemode was complete and playable. </br> 
+							All of the gamemodes are demonstrated in the video link below.
 						</p>
 						<footer>
 							<a href="https://youtu.be/C2QQ_cojnxg" class="button">Link To Video</a>
