--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -104,11 +104,11 @@
 							</p>
 						</header>
 						<p>
-							In this three day game jam game you play as an unstable footed character called Abel. Your goal in controlling Abel is to outrun the zombies chasing him through traffic and an abundance of fences. </br>
-                                                         This project was developed using the game engine of Unity, and made good use of freely available assets, something we as a team had avoided doing in past jams. What this allowed us to do was to focus specifically on the programming aspect of the jam instead of having to worry about art or music. Whilst still having them available to us. </br>
-                                                         As this was my fourth game jam I was able to build off prior jam experience, and have time management handled more efficiently, with less stress overall. </br>
-							 The main part of the development time for me was creating the floppy, yet controllable, player controls. The aim of the system was to allow the player to be able to fing themselves in a ragdoll mode whenever they are hit by a vehicle, but to also allow them to wobble back and forth along the ground. </br>
-							 How this control system was created was through using Unity's joint system, and having a ragdoll model copy the animation of a seperate model. What this allows for is the general walking animation to be followed accuratly, but also for the play controlled version to diverge from the exact animation. </br>
+							In this three day game jam game you play as an unstable footed character called Abel. Your goal in controlling Abel is to outrun the zombies chasing him through traffic and an abundance of fences. </br> </br>
+                                                         This project was developed using the game engine of Unity, and made good use of freely available assets, something we as a team had avoided doing in past jams. What this allowed us to do was to focus specifically on the programming aspect of the jam instead of having to worry about art or music. Whilst still having them available to us. </br> </br>
+                                                         As this was my fourth game jam I was able to build off prior jam experience, and have time management handled more efficiently, with less stress overall. </br> </br>
+							 The main part of the development time for me was creating the floppy, yet controllable, player controls. The aim of the system was to allow the player to be able to fing themselves in a ragdoll mode whenever they are hit by a vehicle, but to also allow them to wobble back and forth along the ground. </br> </br>
+							 How this control system was created was through using Unity's joint system, and having a ragdoll model copy the animation of a seperate model. What this allows for is the general walking animation to be followed accuratly, but also for the play controlled version to diverge from the exact animation. </br> </br>
 							 The land generation system was created by my teammate, having the land delete itself as you get too far away from it, reducing the amount of resources required to play the game.  
 						</p>
 						<footer>
@@ -131,13 +131,13 @@
 							</p>
 						</header>
 						<p>
-							Throughout the jam I worked with two other students, first coming up with game ideas and designs for the theme we were given; 'Spitfire'. 
-							Overall we came up with the idea of making a twin stick shooter, inspired by arcade games of the same genre such as 1942, and more recent games such as Cuphead's flying level.
-							Building on this idea I worked as the solo programmer to create an endless level in which enemy planes spawn in and attack the player, who is a playing as a Spitfire plane.
-							The other two students created the art for the project, giving it a pixelated, and somewhat cartoony feel to it.
-							After submitting the game to the jam we waited a while during the game was made avaliable to the public in Stoke City Centre, as part of a push to get people back into city centres.
-							During the awards ceremony it was revealed that we had won our category as well as overall, with the main feedback given that people wanted more levels, and that it felt like the 'most complete game in the contest overall.' 
-							The gameplay video link below is of the professionally developed version of the game.
+							Throughout the jam I worked with two other students, first coming up with game ideas and designs for the theme we were given; 'Spitfire'. </br>
+							Overall we came up with the idea of making a twin stick shooter, inspired by arcade games of the same genre such as 1942, and more recent games such as Cuphead's flying level. </br>
+							Building on this idea I worked as the solo programmer to create an endless level in which enemy planes spawn in and attack the player, who is a playing as a Spitfire plane. </br>
+							My two teammates created the art for the project, giving it a pixelated, and somewhat cartoony feel to it. </br>
+							After submitting the game to the jam we waited a while during the game was made avaliable to the public in Stoke City Centre, as part of a push to get people back into city centres. </br>
+							During the awards ceremony it was revealed that we had won our category as well as overall, with the main feedback given that people wanted more levels, and that it felt like the 'most complete game in the contest overall.' </br>
+							The gameplay video link below is of the professionally developed version of the game, not the game jam version.
 						</p>
 						<footer>
 							<a href="https://youtu.be/af4zY-OiqKQ" class="button">Gameplay Video</a>
@@ -160,11 +160,11 @@
 							</p>
 						</header>
 						<p>
-							This game jam was developed for Ludum Dare 43, where the theme was 'Sacrifices Must Be Made'. </br>
+							This game jam was developed for Ludum Dare 43, where the theme was 'Sacrifices Must Be Made'. </br> </br>
 							This is one of the most unique games we as a game jam team have created. The game consists of nine seperate windows, which you can drag around the screen, each containing a Lemming-esk character. Each character is of a certain type and can do a certain action. 
 							These actions allow some of the characters to leave their enclosure, and some require others to let them out of theirs. The key of the game is that the characters can traverse between the screens, falling out of theirs off the whole monitor, or into another enclosure entirely. 
-				  			The aim of the game is to free all of the 'grunts' and lead them into the basket in the red screen. Once all of the 'grunts' are in the basket the king is released, who is then requried to be escorted to the castle at the far right of the screen. </br>
-							The game system built upon the prior game jam, 'Zombie Escape's destructable landscape. Allowing for all of the ground to be editiable while running, and having the grunts 'react' to the new landscape. </br>
+				  			The aim of the game is to free all of the 'grunts' and lead them into the basket in the red screen. Once all of the 'grunts' are in the basket the king is released, who is then requried to be escorted to the castle at the far right of the screen. </br> </br>
+							The game system built upon the prior game jam, 'Zombie Escape's destructable landscape. Allowing for all of the ground to be editiable while running, and having the grunts 'react' to the new landscape. </br> </br>
 							The game ended up getting 8th for innovation overall.
 						</p>
 						<footer>
@@ -187,9 +187,9 @@
 							</p>
 						</header>
 						<p>
-							For this game jam submission I worked with one other programmer, working to the theme of running out of space. 
-							As we both had had some prior experience working using SDL2 in C++, we decided to use SDL as the base renderer of the project.  
-							Building from this we decided to go with a zombie style game where you need to build a pile of body parts in order to reach an escape helicopter. This would force the player to shoot the zombies when they are closer to the centre of the level, making the player 'run out of space.'
+							For this game jam submission I worked with one other programmer, working to the theme of running out of space. </br> </br>
+							As we both had had some prior experience working using SDL2 in C++, we decided to use SDL as the base renderer of the project.  </br>
+							Building from this we decided to go with a zombie style game where you need to build a pile of body parts in order to reach an escape helicopter. This would force the player to shoot the zombies when they are closer to the centre of the level, making the player 'run out of space.' </br> </br>
 							As a first game jam project the experience was very good, extremely stressful towards the end, but I learnt a lot from the experience that I have applied to more recent projects. 
 						</p>
 						<footer>
