--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -131,12 +131,12 @@
 							</p>
 						</header>
 						<p>
-							Throughout the jam I worked with two other students, first coming up with game ideas and designs for the theme we were given; 'Spitfire'. </br>
-							Overall we came up with the idea of making a twin stick shooter, inspired by arcade games of the same genre such as 1942, and more recent games such as Cuphead's flying level. </br>
-							Building on this idea I worked as the solo programmer to create an endless level in which enemy planes spawn in and attack the player, who is a playing as a Spitfire plane. </br>
-							My two teammates created the art for the project, giving it a pixelated, and somewhat cartoony feel to it. </br>
-							After submitting the game to the jam we waited a while during the game was made avaliable to the public in Stoke City Centre, as part of a push to get people back into city centres. </br>
-							During the awards ceremony it was revealed that we had won our category as well as overall, with the main feedback given that people wanted more levels, and that it felt like the 'most complete game in the contest overall.' </br>
+							Throughout the jam I worked with two other students, first coming up with game ideas and designs for the theme we were given; 'Spitfire'. </br> </br>
+							Overall we came up with the idea of making a twin stick shooter, inspired by arcade games of the same genre such as 1942, and more recent games such as Cuphead's flying level. </br> </br>
+							Building on this idea I worked as the solo programmer to create an endless level in which enemy planes spawn in and attack the player, who is a playing as a Spitfire plane. </br> </br>
+							My two teammates created the art for the project, giving it a pixelated, and somewhat cartoony feel to it. </br> </br>
+							After submitting the game to the jam we waited a while during the game was made avaliable to the public in Stoke City Centre, as part of a push to get people back into city centres. </br> </br>
+							During the awards ceremony it was revealed that we had won our category as well as overall, with the main feedback given that people wanted more levels, and that it felt like the 'most complete game in the contest overall.' </br> </br>
 							The gameplay video link below is of the professionally developed version of the game, not the game jam version.
 						</p>
 						<footer>
