--- a/First Year/index.html
+++ b/First Year/index.html
@@ -98,6 +98,7 @@
 						</p>
 						<footer>
 							<a href="https://youtu.be/x4cHpkMS2IA" class="button">Link To Video</a>
+							<a href="https://github.com/BrandonMJRoberts/Super-Mario-Bros-3" class="button">Link To Source Code</a>
 						</footer>
 					</article>
 
@@ -125,6 +126,7 @@
 						</p>
 						<footer>
 							<a href="https://youtu.be/C2QQ_cojnxg" class="button">Link To Video</a>
+							<a href="https://github.com/BrandonMJRoberts/Pacman" class="button">Link To Source Code</a>
 						</footer>
 					</article>
 
