--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/Profile Picture.jpeg"/></span>
 							<h1 id="title">Brandon Roberts</h1>
-							<p>Computer Games Programmer</p>
+							<p>Computer Games Programming Student</p>
 						</div>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
+								<li><a href="#top"       id="top-link">      <span class="icon solid fa-home">Intro</span></a></li>
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
+								<li><a href="#about"     id="about-link">    <span class="icon solid fa-user">About Me</span></a></li>
 							</ul>
 						</nav>
 
@@ -61,8 +61,9 @@
 								<p>
 									Welcome to my portfolio! 
 								</br> 
-									I am a second year computer games programming student studying at Staffordshire University. </br> 
-						                        This website is to act as a container for the best projects I have developed in each subsection of my career so far. Each sub section is split into a seperate website which details the main projects developed in that area, along with links to either a demo video of the game playing, or a download page for the game.</br>
+									I am a computer games programming student studying at Staffordshire University who has just completed their second year. </br> 
+						                        This website is to act as a container for the best projects I have developed in each subsection of my career so far. 
+						Each section is split into a seperate website which details the main projects developed in that area, along with links to either a demo video of the game playing, or a download page for the game.</br>
 									Clicking / tapping on any of the icons below takes you to that sub area's website.</br>				
 								</p>
 							</header>
@@ -117,6 +118,16 @@
 									</article>
 								</div> -->
 								
+								<!--
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="Blogs/index.html" target = "_blank" class="image fit"><img src="images/LLTK+ZE Image.png" alt="" /></a>
+										<header>
+											<h3>Graphics Development Blogs</h3>
+										</header>
+									</article>
+								</div> -->
+								
 								<div class="col-4 col-12-mobile">
 									<article class="item">
 										<a href="Game Jams/index.html" target = "_blank" class="image fit"><img src="images/LLTK+ZE Image.png" alt="" /></a>
@@ -138,7 +149,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<p align="left">Since 2016 I have been programming projects that range in target area and scope, aiming to learn as much as I can about the area of computer games programming as a whole. Since starting, I have worked at a local games company, Curioso Games, for seven months, completed multiple games jams, started on the second year of a computer games programming course at Staffordshire University, developed projects using the graphics APIs of OpenGL and DirectX, as well as much more. </br> </br>
+							<p align="left">Since 2016 I have been programming projects that range in scope and area, aiming to learn as much as I can about the area of computer games programming as a whole. Since starting, I have worked at a local games company, Curioso Games, for seven months, completed multiple games jams, started on the second year of a computer games programming course at Staffordshire University, developed projects using the graphics APIs of OpenGL and DirectX, as well as much more. </br> </br>
 									I am currently a second year games programming student that has a stong interest in the area of computer games graphics, and aims to learn about as many areas as I can during my time at university. I aim to keep challenging myself with periodically more difficult projects, improving my programming and problem solving skills throughout. </br> 
                                                                         As part of this year I am looking for placements stating in the next year (May/June etc, 2022), which would help me gain further experience and the confidence required to work a full time graduate role when I graduate.</br></br>
 									The overall goal of this portfolio is to firstly demonstrate both my professional quality work, found under 'Professional Work', as well as providing a timeline of my improvement throughout the years.
