--- a/index.html
+++ b/index.html
@@ -149,9 +149,8 @@
 								<h2>About Me</h2>
 							</header>
 
-							<p align="left">Since 2016 I have been programming projects that range in scope and area, aiming to learn as much as I can about the area of computer games programming as a whole. Since starting, I have worked at a local games company, Curioso Games, for seven months, completed multiple games jams, started on the second year of a computer games programming course at Staffordshire University, developed projects using the graphics APIs of OpenGL and DirectX, as well as much more. </br> </br>
-									I am currently a second year games programming student that has a stong interest in the area of computer games graphics, and aims to learn about as many areas as I can during my time at university. I aim to keep challenging myself with periodically more difficult projects, improving my programming and problem solving skills throughout. </br> 
-                                                                        As part of this year I am looking for placements stating in the next year (May/June etc, 2022), which would help me gain further experience and the confidence required to work a full time graduate role when I graduate.</br></br>
+							<p align="left">Since 2016 I have been programming projects that range in scope and area, aiming to learn as much as I can about the area of computer games programming as a whole. Since starting, I have worked for Playground Games on Forza Horizon 5. And at a local games company, Curioso Games. I have also completed multiple games jams, and recently graduated from a computer games programming bsc(hons) course at Staffordshire University. During this time I have developed projects using the graphics APIs of OpenGL and DirectX, as have begun working towards making another project with Vulkan. </br> </br>
+									I am a games programmer with the aim to keep challenging myself with periodically more difficult projects, improving my programming and problem solving skills throughout. </br>                                                                         
 									The overall goal of this portfolio is to firstly demonstrate both my professional quality work, found under 'Professional Work', as well as providing a timeline of my improvement throughout the years.
 							</p>
 
