--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="Professional Work/index.html" target = "_blank" class="image fit"><img src="images/Marbles.png" alt="" /></a>
+										<a href="Professional Work/index.html" target = "_blank" class="image fit"><img src="images/Forza.png" alt="" /></a>
 										<header>
 											<h3>Professional Work</h3>
 										</header>
