--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 					<!-- Social Icons -->
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/brandon-m-j-roberts/" target = "_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="https://twitter.com/BrandonRob3rts" target = "_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://github.com/BrandonMJRoberts" target = "_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://player-two.itch.io/" target = "_blank" class="icon brands fa-itch.io"><span class="label">itch.io</span></a></li>
 						</ul>
 
 				</div>
