--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/Profile Picture.jpeg"/></span>
 							<h1 id="title">Brandon Roberts</h1>
-							<p>Computer Games Programming Student</p>
+							<p>Computer Games Programmer</p>
 						</div>
 
 					<!-- Nav -->
@@ -93,7 +93,7 @@
 									<article class="item">
 										<a href="First Year/index.html" target = "_blank" class="image fit"><img src="images/Super Mario Bros 3 Image.png" alt="" /></a>
 										<header>
-											<h3>First Year Uni Work</h3>
+											<h3>Uni Projects</h3>
 										</header>
 									</article>
 								</div>
