--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -49,7 +49,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="#Forza" class="image featured"><img src="images/Forza.png" alt="" /></a>
+							<a href="#Forza" class="image featured"><img src="images/Forza.png" alt="" width="300" height="300"/></a>
 							<header>
 								<h3><a href"https://playground-games.com/">Forza Horizon 5</a></h3>
 							</header>
